Fix wrapping issues

--- a/style/style.css
+++ b/style/style.css
@@ -5,10 +5,22 @@ body {
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
-.header {
+.wrapper {
+    display: flex;
+    justify-content: center;
+}
+
+.wrapper.wrapper-header {
     background-color: #1f2937;
+}
+
+.wrapper.wrapper-testimonial {
+    background-color: #e5e7eb;
+}
+
+.header {
     color: #f9faf8;
-    padding: 1em 18em 5em;
+    padding: 1em 2em 5em;
     display: flex;
     flex-direction: column;
     gap: 5em;
@@ -48,10 +60,11 @@ button {
 
 .image-container {
     background-color: grey;
-    width: 400px;
-    flex: 1;
+    height: 200px;
+    flex: 0 0 500px;
     border-radius: 20px;
     display: flex;
+    align-self: center;
     justify-content: center;
     align-items: center;
 }
@@ -60,10 +73,12 @@ button {
     display: flex;
     justify-content: space-between;
     gap: 7em;
+    flex-wrap: wrap;
+    margin: auto;
 }
 
 .signup-text {
-    flex: 1;
+    flex: 0 1 440px;
 }
 
 h1 {
@@ -81,12 +96,16 @@ h1 {
     flex-direction: column;
     padding: 5em 0;
     align-items: center;
+    gap: 5em;
+    text-align: center;
 }
 
 .boxes {
     display: flex;
     flex-direction: row;
     gap: 2em;
+    flex-wrap: wrap;
+    justify-content: center;
 }
 
 .boxes > div {
@@ -94,7 +113,6 @@ h1 {
     flex-direction: column;
     align-items: center;
     text-align: center;
-    padding-top: 5em;
     width: 200px;
     gap: 1em;
 }
@@ -111,20 +129,16 @@ h1 {
 
 .testimonial {
     display: flex;
-    flex-direction: column;
-    padding: 5em 24em;
-    background-color: #e5e7eb;
-}
-
-.quote {
+    padding: 5em 2em;
     display: flex;
     flex-direction: column;
     align-items: flex-end;
     font-weight: 700;
     font-size: 24px;
+    width: 40em;
 }
 
-.quote p {
+.testimonial p {
     align-self: center;
     font-style: italic;
     font-weight: 200;
@@ -134,7 +148,7 @@ h1 {
 }
 
 .call-to-action {
-    padding: 5em 18em;
+    padding: 5em 2em;
 }
 
 .actionbox {
@@ -149,7 +163,8 @@ h1 {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    color: #e5e7eb
+    color: #e5e7eb;
+    gap: 2em;
 }
 
 .actionbox div button {
@@ -169,4 +184,11 @@ h1 {
     background-color: #1f2937;
     padding: 3em 0;
     color: #e5e7eb;
+}
+
+@media (max-width: 1115px) {
+    .signup {
+        justify-content: center;
+        gap: 2em;
+    }
 }
